--- a/data/htm/2012_2_normal_exercise.htm
+++ b/data/htm/2012_2_normal_exercise.htm
@@ -251,7 +251,7 @@
 <td class="pstyle2">목&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">김나이&nbsp;</td>
+<td class="pstyle2">홍애령&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -264,7 +264,7 @@
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">홍애령&nbsp;</td>
+<td class="pstyle2">김나이&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -391,12 +391,12 @@
 <td class="pstyle2">수영 1(평영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">박일혁&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.030&nbsp;</td>
@@ -404,12 +404,12 @@
 <td class="pstyle2">수영 1(평영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">금&nbsp;2,3&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김민주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.030&nbsp;</td>
@@ -422,7 +422,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김민주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.031&nbsp;</td>
@@ -430,12 +430,12 @@
 <td class="pstyle2">수영 2(평영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">월&nbsp;2,3&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">권현진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.032&nbsp;</td>
@@ -448,7 +448,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">권현진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.032&nbsp;</td>
@@ -456,12 +456,12 @@
 <td class="pstyle2">수영 3(자유형)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">화&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">조은효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.032&nbsp;</td>
@@ -469,12 +469,12 @@
 <td class="pstyle2">수영 3(자유형)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">금&nbsp;8,9&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.033&nbsp;</td>
@@ -482,12 +482,12 @@
 <td class="pstyle2">수영 4(자유형)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">목&nbsp;2,3&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김종호&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.034&nbsp;</td>
@@ -495,12 +495,12 @@
 <td class="pstyle2">수영 5(접영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">수&nbsp;2,3&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김한범&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.039&nbsp;</td>
@@ -560,12 +560,12 @@
 <td class="pstyle2">체력단련&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김철웅&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.040&nbsp;</td>
@@ -885,12 +885,12 @@
 <td class="pstyle2">골프초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">노신철&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.049&nbsp;</td>
@@ -898,12 +898,12 @@
 <td class="pstyle2">골프초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">노신철&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.049&nbsp;</td>
@@ -979,7 +979,7 @@
 <td class="pstyle2">금&nbsp;5,6,7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">052-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -992,7 +992,7 @@
 <td class="pstyle2">금&nbsp;1,2,3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">052-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1444,12 +1444,12 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">임강일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.083&nbsp;</td>
