--- a/data/htm/2012_2_normal_history.htm
+++ b/data/htm/2012_2_normal_history.htm
@@ -1277,7 +1277,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">008-101&nbsp;</td>
+<td class="pstyle2">43-1-201&nbsp;</td>
 <td class="pstyle2">임부연&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1290,7 +1290,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">008-101&nbsp;</td>
+<td class="pstyle2">43-1-201&nbsp;</td>
 <td class="pstyle2">임부연&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
