--- a/data/htm/2012_2_core_technology.htm
+++ b/data/htm/2012_2_core_technology.htm
@@ -107,7 +107,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L301&nbsp;</td>
+<td class="pstyle2">028-302&nbsp;</td>
 <td class="pstyle2">국양&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -120,7 +120,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L301&nbsp;</td>
+<td class="pstyle2">028-302&nbsp;</td>
 <td class="pstyle2">국양&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
