--- a/data/htm/2012_2_normal_special.htm
+++ b/data/htm/2012_2_normal_special.htm
@@ -97,7 +97,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이건우&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -188,7 +188,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이연승&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -214,7 +214,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Peter W. Milne&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -266,7 +266,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">채종철&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -318,7 +318,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이창복&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -422,7 +422,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">허보윤&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -435,7 +435,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김형숙&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -474,7 +474,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박재학&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -513,7 +513,7 @@
 <td class="pstyle2">083-201&nbsp;</td>
 <td class="pstyle2">이정상&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -526,7 +526,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">손환철&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -565,7 +565,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">윤영호&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -591,7 +591,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박태균&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
